# uminoid_exo_interface

./: .clangd  .gitignore  .gitmodules  calibrate_bounds.py  calibrate_dynamixel.py  cleanup.py  compress_raw_frames.py  control_inspire_from_host.md  get_inspire_id.py  joint_reader.hpp  joint_reader.py  joint_reader_constants.py  joints.py  load_session.py  mock_serial.py  postprocess_data.py  read_dynamixel.py  readme.md  relay.py  relay_csv.py  requirements.txt  right_elbow_swing.cpp  serial_read_9600.cpp  serial_reader.py  serial_value_reader.hpp  serial_value_reader_example.cpp  set_inspire_id.py  setup_arm_udev.py  todo.md
amo_sidecar/: README.md  amo_sidecar.py  proto.py  wire_protocol.py
config/: collect.yaml  collect2.yaml
cpp/: CMakeLists.txt  ReadMe.md  as5600_test.cpp  camera.cpp  collect.cpp  collect_config.yaml  collect_ui.hpp  config.yaml  devices_config.yaml  dynamixel_test.cpp  manus_to_inspire.cpp  right_elbow_swing.cpp  swing_elbow.cpp  teleoperate.cpp
cpp/camera/: camera_recorder.cpp  camera_recorder.hpp  preview_server.cpp  preview_server.hpp  usb_camera_recorder.cpp  usb_camera_recorder.hpp  zmq_camera_recorder.cpp  zmq_camera_recorder.hpp
cpp/g1/: amo_bridge.cpp  amo_bridge.hpp  amo_zmq_helper.cpp  amo_zmq_helper.hpp  g1Controller.cpp  g1Controller.hpp  g1Robot.cpp  g1Robot.hpp  g1TeleopController.cpp  g1TeleopController.hpp
cpp/g1/amo/: amo_bridge.cpp  amo_bridge.hpp  amo_zmq_helper.cpp  amo_zmq_helper.hpp
cpp/g1/dynamics/: dynamics.cpp  dynamics.hpp
cpp/g1/model/: g1Enums.hpp  g1Structs.hpp  g1Values.hpp  upperBodyJointBounds.yaml
cpp/hand_retarget/inspire/: g1_inspire_retargeter.cpp  g1_inspire_retargeter.hpp  inspire_port_resolver.cpp  inspire_port_resolver.hpp  inspire_retarget_bounds.yaml  inspire_retargeter.cpp  inspire_retargeter.hpp  usb_inspire_retargeter.cpp  usb_inspire_retargeter.hpp
cpp/joint_reader/: bounds_loader.cpp  bounds_loader.hpp  constants.hpp  dynamixel_example.cpp  dynamixel_reader.cpp  dynamixel_reader.hpp  joint_manager.cpp  joint_manager.hpp  joint_reader.hpp  serial_manager.cpp  serial_manager.hpp  serial_reader.cpp  serial_reader.hpp  serial_value_reader.cpp  upperBodyReaderBounds.yaml
cpp/manus/: manus_glove_reader.cpp  manus_glove_reader.hpp  manus_hand.cpp  manus_hand.hpp  manus_reader.cpp  manus_reader.hpp
cpp/test/: as5600_test.cpp  camera_test.cpp  dynamixel_test.cpp  inspire_force_test.cpp  inspire_force_test_config.yaml  inspire_g1_test.cpp  inspire_test.cpp  manus_test.cpp  retarget_test.cpp
cpp/test/collect_cli/: main.cpp
cpp/upper_body_reader/: constants.hpp  exo_upper_body_reader.cpp  exo_upper_body_reader.hpp  g1_upper_body_reader.cpp  g1_upper_body_reader.hpp  upperBodyReaderBounds.yaml  upper_body_reader.cpp  upper_body_reader.hpp
cpp/upper_body_reader/arm_reader/: arm_angle_converter.hpp  arm_reader.cpp  arm_reader.hpp  skeleton_arm.hpp
cpp/upper_body_reader/arm_reader/as5600/: as5600_arm.cpp  as5600_arm.hpp
cpp/upper_body_reader/arm_reader/dynamixel/: dynamixel_arm.cpp  dynamixel_arm.hpp  dynamixel_bounds.yaml
cpp/upper_body_reader/joint_reader/: as5600_reader.cpp  as5600_reader.hpp  dynamixel_bounds.yaml  dynamixel_reader.cpp  dynamixel_reader.hpp  joint_reader.hpp
cpp/utils/: DataBuffer.hpp  bounds_loader.cpp  bounds_loader.hpp  circular_math.hpp  crc32.hpp  csv_saver.hpp  dynamixel_timestamp_helper.cpp  dynamixel_timestamp_helper.hpp  metadata_loader.cpp  metadata_loader.hpp  recording_label.hpp  repo_constants.hpp  time.hpp  type.hpp
documentation/psi-0/: data_flow.md  dynamics.md
guides/: camera_pose_alignment_discussion.md  upload_to_drive.md
py/: build_final_dataset.py  collect_with_preview.py  compress_raw_frames.py  load_session.py  paths.py  postprocess_data.py
py/calibrate/: calibrate_bounds.py  calibrate_dynamixel.py  read_dynamixel.py  setup_dynamixel_udev.py
py/collect/: collect_2.py  collect_with_preview.py
py/collect/amo_sidecar/: README.md  amo_sidecar.py  humanoid_env_headless.py
py/collect/camera/: camera_recorder.py  preview.py  usb_camera_recorder.py  zmq_camera_recorder.py
py/collect/camera/components/: frame_writer.py  preview.py  tilt.py
py/postprocess/: exoskeleton_to_psi0_lerebot.py  postprocess.py
py/postprocess/helpers/: error_check.py  rgb_to_png.py
py/postprocess/processor/: processor.py
py/postprocess/processor/components/: arm.py  camera.py  columns.py  frame.py  hand.py  mode.py  status.py
py/postprocess/processor/lerobot/: constants.py  lerobot.py  metadata.py  quality.py
py/utils/: convert_to_radian.py  csv_saver.py  host_time.py  recording_label.py
utils/: convert_to_radian.py
